syntax = "proto3";
 
package account;


service AccountService{
    rpc Logout(LogoutRequest) returns (Empty);
    rpc KillSession(KillSessionRequest) returns (Empty);
    rpc GetSessions(GetSessionsRequest) returns (Sessions);
}

message Empty{}

message KillSessionRequest{
    int32 session_id = 1;
}

message LogoutRequest{
    string access_token = 1;
    int32 user_id = 2;
}

message GetSessionsRequest{
    int32 user_id = 1;
}

message Session{
    string agent = 1;
    string ip = 2;
    string status = 3;
    int32 session_id = 4;
    string created_at = 5;
}

message Sessions {
    repeated Session sessions = 1;
}
